fix: vertical resizing, lines spacing and trimmed in docs

--- a/packages/css/src/components/textarea.css
+++ b/packages/css/src/components/textarea.css
@@ -9,7 +9,7 @@
     line-height: var(--line-height);
     outline: none;
     border: none;
-    resize: both;
+    resize: vertical;
     min-width: 24ch;
 
     &::placeholder {
